z-index fix for nav

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -162,6 +162,7 @@ body {
 
 .navigation__container {
   position: fixed;
+  z-index: 1;
   bottom: 0;
   left: 0;
   right: 0;
